# PredictFlow

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  utils.py
.virtual_documents/notebooks/: Experiments.ipynb
models/: churn_model.keras  scaler.pkl
notebooks/: EDA.ipynb  Experiments.ipynb
